# cluster-purger

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: release-tag.yml  tests.yml
cluster_purger/: config.py  proxy.py  utils.py
cluster_purger/app/: __init__.py  healthcheck.py  info.py  proxy.py
tests/: conftest.py
tests/app/: test_app_healthcheck.py  test_app_info.py  test_app_proxy.py
tests/utils/: test_generate_urls_one_hostname.py  test_generate_urls_two_hostnames.py  test_name_for_resolution.py  test_resolve_service_name.py
